--- a/index.css
+++ b/index.css
@@ -15,6 +15,13 @@ body {
   font-size: 12pt;
   line-height: 1.5;
 }
+.accessibility-text {
+  display: none;
+}
+a:visited,
+a:focus {
+  color: #5a5a33;
+}
 main {
   padding: 3em;
 }
@@ -22,22 +29,25 @@ main h1 {
   font-size: 22pt;
   text-align: center;
 }
+main h2 {
+  margin: 1.5em 0 0 0;
+}
 main img {
   width: 100%;
 }
-.icon-github,
-.icon-twitter,
-.icon-linkedin,
-.icon-email,
-.icon-telephone {
+.icon {
   display: inline-block;
-  background-image: url("img/icons.png");
+  background-image: url("icons.min.png");
   background-repeat: no-repeat;
   vertical-align: middle;
   background-size: 100%;
   width: 25px;
   height: 25px;
   margin-left: 7px;
+}
+.icon:hover {
+  margin: -1px 1px 1px 6px;
+  box-shadow: 1px 1px 7px #000;
 }
 .icon-linkedin {
   background-position: 0 -75px;
@@ -87,7 +97,6 @@ h2 a[name]::after {
   margin: auto 0;
   display: inline-block;
   list-style-type: none;
-  background-color: #fff;
 }
 #menu ul li {
   display: inline-block;
@@ -110,7 +119,8 @@ h2 a[name]::after {
   #menu ul {
     border-bottom: solid 2px #000;
     display: inline-block;
-    padding: 0 0.5em 0.25em 5em;
+    padding: 0 0.5em 0 5em;
+    background-color: #fff;
   }
   #portrait {
     max-width: 50%;
