--- a/index.pug
+++ b/index.pug
@@ -4,6 +4,9 @@ mixin contactList(links)
       span(class="icon icon-" + link.type, title=link.desc)
         span.accessibility-text(style="display:none")= link.desc
 
+mixin entry(href, link, desc)
+  li #[a(href=href, target="_blank")= link]: #[= desc].
+
 doctype html
 html(lang="en-us")
   head
@@ -11,8 +14,8 @@ html(lang="en-us")
     meta(name="viewport", content="width=device-width, shrink-to-fit=0, initial-scale=1.0")
     meta(name="keywords", content="software development, software engineering, programming, freelancing, Sean T. McBeth, embedded programming, virtual reality, agumented reality, VR, AR, 3D, graphics programming, game development, simulation, abstract data visualization, audio synthesis, signals processing, computer vision, peer-to-peer, networking, desktop software, Web applications, mobile apps, WebRTC, hardware, embedded systems, reporting, GIS, databases")
     title Sean T. McBeth: engineer, photographer, mad scientist
-    != liveReload
     style(type="text/css")!= readFile("index" + cssExt)
+    != liveReload
   body
 
     section#menu
@@ -57,44 +60,46 @@ html(lang="en-us")
 
         h2: a(name="projects") Projects
         ul
-          li: a(href="https://www.primrosevr.com/") Primrose: build VR experiences in your browser
-          li: a(href="https://capnmidnight.github.io/marigold-build/") Marigold: a development environment for JavaScript Single-Page Applications
-          li: a(href="https://github.com/capnmidnight/plume") Plume: a VR teleconferencing system for the Web
-          li: a(href="https://github.com/capnmidnight/pliny") Pliny: a live-documentation system for JavaScript projects
+          +entry("https://www.primrosevr.com/", "Primrose", "build VR experiences in your browser")
+          +entry("https://capnmidnight.github.io/marigold-build/", "Marigold", "a development environment for JavaScript Single-Page Applications")
+          +entry("https://github.com/capnmidnight/plume", "Plume", "a VR teleconferencing system for the Web")
+          +entry("https://github.com/capnmidnight/pliny", "Pliny", "a live-documentation system for JavaScript projects")
 
         h2: a(name="community") Community
         ul
-          li Organizer for #[a(href="https://www.meetup.com/Alexandria-Code-Coffee/") Alexandria Code &amp; Coffee].
-          li Co-organizer for #[a(href="https://www.meetup.com/DCRealities/") DC Realities].
-          li Organizer for #[a(href="https://www.meetup.com/Alexandria-VR-Meetup/") Alexandria VR Meetup].
-          li Participant in the #[a(href="https://www.w3.org/community/webvr/participants") W3 WebVR Community Group].
+          +entry("https://www.meetup.com/Alexandria-Code-Coffee/", "Alexandria Code & Coffee", "Organizer")
+          +entry("https://www.meetup.com/DCRealities/", "DC Realities", "Co-organizer")
+          +entry("https://www.meetup.com/Alexandria-VR-Meetup/", "Alexandria VR Meetup", "Organizer")
+          +entry("https://www.w3.org/community/webvr/participants", "W3 WebVR Community Group", "Participant")
 
         h2: a(name="talks") Talks &amp; Interviews
         ul
-          li #[a(href="https://www.evensi.us/virtual-reality-seminar-hosted-by-sean-mcbeth-northern/208134705") NOVA National Society of Collegiate Scholars']: I was the keynote speaker for their annual event at Northern Virginia Community College's Loudoun campus.
-          li #[a(href="https://soundcloud.com/jon-wilkening/episode-16-sean-mcbeth") The Creative Bar: Episode 16].
-          li #[a(href="http://virtualrealityobserver.com/interview-sean-mcbeth-lead-vr-developer-of-notiontheory/") The Virtual Reality Observer].
-          li #[a(href="http://arinaction.org/speakers/sean-mcbeth/") AR In Action 2016]: I spoke on two panels on haptics and content development.
-          li #[a(href="https://leanagiledc.com/speaker/sean-mcbeth/") Lean+Agile DC]: I gave a talk on rapid application development for VR.
-          li #[a(href="https://www.youtube.com/watch?v=TU1rG_tZp-I") NOVAVR]: I spoke on a panel about the current state and future of Virtual and Augmented Reality.
-          li #[a(href="http://vrar.withthebest.com/#speakers") VR/AR With The Best]: I gave a webinar and ran personal Q&amp;A sessions on using Primrose to build VR applications.
-          li #[a(href="https://storify.com/ShahnazKamberi/stratfordwbcsit") Stratford University]: I described the essentials of Virtual Reality for Stratford's CS/IT students.
-          li #[a(href="https://nvite.com/CodePenDC/ec85") CodePen DC]: I spoke on the emerging WebVR API and how developers can get started.
-          li #[a(href="https://devdiner.com/interviews/sean-mcbeth-on-primrose-webvr") Sean McBeth on Primrose and WebVR development (Dev Diner)].
-          li #[a(href="http://www.blogtalkradio.com/dc-entrepreneur/2015/11/05/interview-with-sean-mcbeth-future-of-vr") DC Entrepreneur: Episode 2].
-          li #[a(href="https://www.facebook.com/dcvirtualreality/videos/1091494284227423/") Several] #[a(href="https://www.facebook.com/dcvirtualreality/videos/1452036654839849/") events] for #[a(href="https://www.meetup.com/DCRealities/events/229971228/") DCVR], our local VR enthusiasts' meetup.
-          li #[a(href="http://makezine.com/projects/make-35/making-pigments/") MAKE Magazine, Issue 35: Making Pigments].
+          +entry("https://www.facebook.com/dcvirtualreality/videos/1452036654839849/", "DCVR June 2017", "I spoke on getting started with Augmented Reality programming")
+          +entry("https://www.evensi.us/virtual-reality-seminar-hosted-by-sean-mcbeth-northern/208134705", "NOVA National Society of Collegiate Scholars'", "I was the keynote speaker for their annual event at Northern Virginia Community College's Loudoun campus")
+          +entry("https://soundcloud.com/jon-wilkening/episode-16-sean-mcbeth", "The Creative Bar: Episode 16", "I was interviewed on a podcast about entrepreneurship")
+          +entry("http://virtualrealityobserver.com/interview-sean-mcbeth-lead-vr-developer-of-notiontheory/", "The Virtual Reality Observer", "I was interviewed for a tech blog about the future of VR")
+          +entry("http://arinaction.org/speakers/sean-mcbeth/", "AR In Action 2016", "I spoke on two panels on haptics and content development")
+          +entry("https://leanagiledc.com/speaker/sean-mcbeth/", "Lean+Agile DC", "I gave a talk on rapid application development for VR")
+          +entry("https://www.youtube.com/watch?v=TU1rG_tZp-I", "NOVAVR", "I spoke on a panel about the current state and future of Virtual and Augmented Reality")
+          +entry("http://vrar.withthebest.com/#speakers", "VR/AR With The Best", "I gave a webinar and ran personal Q&amp;A sessions on using Primrose to build VR applications")
+          +entry("https://storify.com/ShahnazKamberi/stratfordwbcsit", "Stratford University", "I described the essentials of Virtual Reality for Stratford's CS/IT students")
+          +entry("https://www.facebook.com/dcvirtualreality/videos/1091494284227423/", "DCVR Breakout Session #5", "I conducted a seminar on getting started with WebVR through Primrose")
+          +entry("https://nvite.com/CodePenDC/ec85", "CodePen DC", "I spoke on the emerging WebVR API and how developers can get started")
+          +entry("https://devdiner.com/interviews/sean-mcbeth-on-primrose-webvr", "Sean McBeth on Primrose and WebVR development (Dev Diner)", "I was interviewed for a blog about learning VR programming.")
+          +entry("http://www.blogtalkradio.com/dc-entrepreneur/2015/11/05/interview-with-sean-mcbeth-future-of-vr", "DC Entrepreneur: Episode 2", "I was interviewed on a podcast about entrepreneurship")
+          +entry("https://www.meetup.com/DCRealities/events/229971228/", "2nd Annual DCVR Innovation Panel", "I spoke on a panel about the current state and future of VR")
+          +entry("http://makezine.com/projects/make-35/making-pigments/", "MAKE Magazine, Issue 35: Making Pigments", "I wrote an article about making paint pigments from basic chemicals")
 
         h2: a(name="press") Press
         ul
-          li: a(href="http://dcinno.streetwise.co/2017/03/06/a-dc-virtual-reality-startup-now-lets-you-feel-in-vr/") A DC Virtual Reality Startup Now Lets You Feel in VR (DC Inno)
-          li: a(href="http://dailyfreepress.com/2017/01/18/ar-in-action-features-current-and-future-developments-in-technological-field/") AR in Action features current and future developments in technological field (Daily Free Press, Boston University)
-          li: a(href="https://venturebeat.com/2016/09/17/how-webvr-will-make-virtual-reality-massively-available/") How WebVR will make virtual reality massively available (VentureBeat)
-          li: a(href="http://www.thehoya.com/first-east-coast-virtual-reality-arcade-opens-in-d-c/") First East Coast Virtual Reality Arcade Opens in D.C. (The Hoya, Georgetown University)
-          li: a(href="http://www.techradar.com/news/gaming/how-one-of-the-first-vr-arcades-will-bring-us-together-in-our-own-little-worlds-1327005") How one of the first VR arcades will bring us together in our own little worlds (TechRadar)
-          li: a(href="http://sensics.com/why-webvr/") Why WebVR (Sensics blog)
-          li: a(href="https://www.sitepoint.com/build-virtual-reality-with-primrose-and-webvr/") Build Virtual Reality in VR with Primrose and WebVR (SitePoint)
-          li: a(href="http://dcinno.streetwise.co/2015/08/14/washington-dc-virtual-reality-vr-tech-startups-hub/") The State of DC Virtual Reality Innovation: Part 1 (DC Inno)
+          +entry("http://dcinno.streetwise.co/2017/03/06/a-dc-virtual-reality-startup-now-lets-you-feel-in-vr/", "DC Inno", "A DC Virtual Reality Startup Now Lets You Feel in VR")
+          +entry("http://dailyfreepress.com/2017/01/18/ar-in-action-features-current-and-future-developments-in-technological-field/", "Daily Free Press, Boston University", "AR in Action features current and future developments in technological field")
+          +entry("https://venturebeat.com/2016/09/17/how-webvr-will-make-virtual-reality-massively-available/", "VentureBeat", "How WebVR will make virtual reality massively available")
+          +entry("http://www.thehoya.com/first-east-coast-virtual-reality-arcade-opens-in-d-c/", "The Hoya, Georgetown University", "First East Coast Virtual Reality Arcade Opens in D.C.")
+          +entry("http://www.techradar.com/news/gaming/how-one-of-the-first-vr-arcades-will-bring-us-together-in-our-own-little-worlds-1327005", "TechRadar", "How one of the first VR arcades will bring us together in our own little worlds")
+          +entry("http://sensics.com/why-webvr/", "Sensics blog", "Why WebVR")
+          +entry("https://www.sitepoint.com/build-virtual-reality-with-primrose-and-webvr/", "SitePoint", "Build Virtual Reality in VR with Primrose and WebVR")
+          +entry("http://dcinno.streetwise.co/2015/08/14/washington-dc-virtual-reality-vr-tech-startups-hub/", "DC Inno", "The State of DC Virtual Reality Innovation: Part 1")
 
       h2 Thanks for reading
       img(src="sean" + gifExt, alt="animated portrait", title="Sean T. McBeth")
