--- a/index.pug
+++ b/index.pug
@@ -47,7 +47,10 @@ html(lang="en-us")
               href: "https://github.com/capnmidnight" },
             { type: "telephone",
               desc: "Call Sean",
-              href: "tel:+17172617689" }
+              href: "tel:+17172617689" },
+            { type: "calendar",
+              desc: "Schedule a meeting",
+              href: "https://calendly.com/sean-mcbeth" }
           ])
 
         p I am a freelance software consultant in virtual reality, augmented reality, games, simulation, graphics, abstract data visualization, audio synthesis and processing, computer vision, peer-to-peer networking, desktop, Web, mobile, real-time communication, hardware prototyping, embedded systems, reporting, GIS, and relational database systems.
