--- a/index.styl
+++ b/index.styl
@@ -59,6 +59,9 @@ main
 .icon-email
   background-position 0 -150px
 
+.icon-calendar
+  background-position 0px -175px
+
 .icon-telephone
   background-position 0px -200px
 
