--- a/index.css
+++ b/index.css
@@ -61,6 +61,9 @@ main img {
 .icon-email {
   background-position: 0 -150px;
 }
+.icon-calendar {
+  background-position: 0px -175px;
+}
 .icon-telephone {
   background-position: 0px -200px;
 }
