3rd haptic glove version

--- a/other.pug
+++ b/other.pug
@@ -47,6 +47,7 @@ html(lang="en-us")
           li #[a(href="https://www.youtube.com/watch?v=xSSL8WqZT6o") Music beat detection] for #[a(href="https://www.youtube.com/watch?v=K_HJtNlNsmg&feature=youtu.be&t=20") game-play synchronization]
           li: a(href="https://www.youtube.com/watch?v=9_6_w-dXVw0") Electron/WebRTC app for screen sharing and web app collaboration
           li: a(href="https://www.youtube.com/watch?v=CEYDYRBhC2E") AR for business cards
+          li: a(href="https://www.facebook.com/adamzuckerman/posts/10101366098933612") Haptic Glove, v3
           li: a(href="https://medium.com/@notiontheory/building-a-haptic-feedback-glove-for-virtual-reality-77232999a2d7") Haptic Glove, v2
           li: a(href="https://plus.google.com/+SeanMcBeth/posts/gKF7sQ2FAhh") Haptic Glove, v1
           li: a(href="https://www.bloomberg.com/news/articles/2016-12-06/goldman-sachs-alum-turns-to-virtual-reality-to-sell-57-million-mansion") REX: 360° Real Estate Tours
