--- a/index.pug
+++ b/index.pug
@@ -1,11 +1,18 @@
+mixin offsite(href)
+  a(href=href, target="_blank", rel="noopener")
+    block
+
 mixin contactList(links)
   ul#contact: each link in links
-    li: a(href=link.href, target="_blank", rel="noopener")
+    li: +offsite(link.href)
       span(class="icon icon-" + link.type, title=link.desc)
         span.accessibility-text(style="display:none")= link.desc
 
-mixin entry(href, link, desc)
-  li #[a(href=href, target="_blank", rel="noopener")= link]: #[= desc].
+mixin entry(href, link)
+  li
+    +offsite(href)= link
+    | #{": "}
+    block
 
 doctype html
 html(lang="en-us")
@@ -47,15 +54,12 @@ html(lang="en-us")
               href: "https://github.com/capnmidnight" },
             { type: "telephone",
               desc: "Call Sean",
-              href: "tel:+17172617689" },
-            { type: "calendar",
-              desc: "Schedule a meeting",
-              href: "https://calendly.com/sean-mcbeth" }
+              href: "tel:+17172617689" }
           ])
 
-        p I am a freelance software consultant in virtual reality, augmented reality, games, simulation, graphics, abstract data visualization, audio synthesis and processing, computer vision, peer-to-peer networking, desktop, Web, mobile, real-time communication, hardware prototyping, embedded systems, reporting, GIS, and relational database systems.
+        p I am a software consultant at #[+offsite("https://www.deloittedigital.com/") Deloitte Digital] with the Deloitte Center for Immersive Learning (DCIL). We build virtual and augmented reality games, training simulations, and abstract data visualization. Audio synthesis and processing, computer vision, peer-to-peer networking, real-time communication, hardware prototyping, and Geographic Information Systems (GIS) are other areas in which I work. I've worked across the range of desktop, Web, mobile, embedded systems, and relational database systems.
 
-        p My current work is focused on Virtual Reality and electronics. I've successfully bootstrapped and deployed multiple VR projects for Google Cardboard and HTC Vive, as well as a few hardware prototypes in radio and wireless input devices. Before VR, I built several analytics-heavy OLTP applications for desktop, Web, and mobile Web.
+        p My current work is focused on Immersive Media. I've successfully bootstrapped and deployed multiple VR projects for Google Cardboard, Oculus Rift, HTC Vive, and Gear VR. I've also built a number of hardware prototypes in radio and wireless input devices. Before VR, I built several analytics-heavy OLTP applications for desktop, Web, and mobile Web.
 
         p My projects usually go from concept to first-version in 1-to-2-month timeframes. I emphasize open communication with stakeholders, frequent issue and user-story tracking and review, correct, normalized relational database design and simple, best-practice-based, DRY, agile software development. I maintain an extremely broad set of skills to bring to bear on your project.
 
@@ -63,46 +67,46 @@ html(lang="en-us")
 
         h2: a(name="projects") Projects
         ul
-          +entry("https://www.primrosevr.com/", "Primrose", "build VR experiences in your browser")
-          +entry("https://capnmidnight.github.io/marigold-build/", "Marigold", "a development environment for JavaScript Single-Page Applications")
-          +entry("https://github.com/capnmidnight/plume", "Plume", "a VR teleconferencing system for the Web")
-          +entry("https://github.com/capnmidnight/pliny", "Pliny", "a live-documentation system for JavaScript projects")
+          +entry("https://www.primrosevr.com/", "Primrose") build VR experiences in your browser
+          +entry("https://capnmidnight.github.io/marigold-build/", "Marigold") a development environment for JavaScript Single-Page Applications
+          +entry("https://github.com/capnmidnight/plume", "Plume") a VR teleconferencing system for the Web
+          +entry("https://github.com/capnmidnight/pliny", "Pliny") a live-documentation system for JavaScript projects
 
         h2: a(name="community") Community
         ul
-          +entry("https://www.meetup.com/Alexandria-Code-Coffee/", "Alexandria Code & Coffee", "Organizer")
-          +entry("https://www.meetup.com/DCRealities/", "DC Realities", "Co-organizer")
-          +entry("https://www.meetup.com/Alexandria-VR-Meetup/", "Alexandria VR Meetup", "Organizer")
-          +entry("https://www.w3.org/community/webvr/participants", "W3 WebVR Community Group", "Participant")
+          +entry("https://www.meetup.com/Alexandria-Code-Coffee/", "Alexandria Code & Coffee") Organizer
+          +entry("https://www.meetup.com/DCRealities/", "DC Realities") Co-organizer
+          +entry("https://www.meetup.com/Alexandria-VR-Meetup/", "Alexandria VR Meetup") Organizer
+          +entry("https://www.w3.org/community/webvr/participants", "W3 WebVR Community Group") Participant
 
         h2: a(name="talks") Talks &amp; Interviews
         ul
-          +entry("https://www.facebook.com/dcvirtualreality/videos/1452036654839849/", "DCVR June 2017", "I spoke on getting started with Augmented Reality programming")
-          +entry("https://www.evensi.us/virtual-reality-seminar-hosted-by-sean-mcbeth-northern/208134705", "NOVA National Society of Collegiate Scholars'", "I was the keynote speaker for their annual event at Northern Virginia Community College's Loudoun campus")
-          +entry("https://soundcloud.com/jon-wilkening/episode-16-sean-mcbeth", "The Creative Bar: Episode 16", "I was interviewed on a podcast about entrepreneurship")
-          +entry("http://virtualrealityobserver.com/interview-sean-mcbeth-lead-vr-developer-of-notiontheory/", "The Virtual Reality Observer", "I was interviewed for a tech blog about the future of VR")
-          +entry("http://arinaction.org/speakers/sean-mcbeth/", "AR In Action 2016", "I spoke on two panels on haptics and content development")
-          +entry("https://leanagiledc.com/speaker/sean-mcbeth/", "Lean+Agile DC", "I gave a talk on rapid application development for VR")
-          +entry("https://www.youtube.com/watch?v=TU1rG_tZp-I", "NOVAVR", "I spoke on a panel about the current state and future of Virtual and Augmented Reality")
-          +entry("http://vrar.withthebest.com/#speakers", "VR/AR With The Best", "I gave a webinar and ran personal Q&amp;A sessions on using Primrose to build VR applications")
-          +entry("https://storify.com/ShahnazKamberi/stratfordwbcsit", "Stratford University", "I described the essentials of Virtual Reality for Stratford's CS/IT students")
-          +entry("https://www.facebook.com/dcvirtualreality/videos/1091494284227423/", "DCVR Breakout Session #5", "I conducted a seminar on getting started with WebVR through Primrose")
-          +entry("https://nvite.com/CodePenDC/ec85", "CodePen DC", "I spoke on the emerging WebVR API and how developers can get started")
-          +entry("https://devdiner.com/interviews/sean-mcbeth-on-primrose-webvr", "Sean McBeth on Primrose and WebVR development (Dev Diner)", "I was interviewed for a blog about learning VR programming.")
-          +entry("http://www.blogtalkradio.com/dc-entrepreneur/2015/11/05/interview-with-sean-mcbeth-future-of-vr", "DC Entrepreneur: Episode 2", "I was interviewed on a podcast about entrepreneurship")
-          +entry("https://www.meetup.com/DCRealities/events/229971228/", "2nd Annual DCVR Innovation Panel", "I spoke on a panel about the current state and future of VR")
-          +entry("http://makezine.com/projects/make-35/making-pigments/", "MAKE Magazine, Issue 35: Making Pigments", "I wrote an article about making paint pigments from basic chemicals")
+          +entry("https://www.facebook.com/dcvirtualreality/videos/1452036654839849/", "DCVR June 2017") I spoke on getting started with Augmented Reality programming
+          +entry("https://www.evensi.us/virtual-reality-seminar-hosted-by-sean-mcbeth-northern/208134705", "NOVA National Society of Collegiate Scholars'") I was the keynote speaker for their annual event at Northern Virginia Community College's Loudoun campus
+          +entry("https://soundcloud.com/jon-wilkening/episode-16-sean-mcbeth", "The Creative Bar: Episode 16") I was interviewed on a podcast about entrepreneurship
+          +entry("http://virtualrealityobserver.com/interview-sean-mcbeth-lead-vr-developer-of-notiontheory/", "The Virtual Reality Observer") I was interviewed for a tech blog about the future of VR
+          +entry("http://arinaction.org/speakers/sean-mcbeth/", "AR In Action 2016") I spoke on two panels on haptics and content development
+          +entry("https://leanagiledc.com/speaker/sean-mcbeth/", "Lean+Agile DC") I gave a talk on rapid application development for VR
+          +entry("https://www.youtube.com/watch?v=TU1rG_tZp-I", "NOVAVR") I spoke on a panel about the current state and future of Virtual and Augmented Reality
+          +entry("http://vrar.withthebest.com/#speakers", "VR/AR With The Best") I gave a webinar and ran personal Q&amp;A sessions on using Primrose to build VR applications
+          +entry("https://storify.com/ShahnazKamberi/stratfordwbcsit", "Stratford University") I described the essentials of Virtual Reality for Stratford's CS/IT students
+          +entry("https://www.facebook.com/dcvirtualreality/videos/1091494284227423/", "DCVR Breakout Session #5") I conducted a seminar on getting started with WebVR through Primrose
+          +entry("https://nvite.com/CodePenDC/ec85", "CodePen DC") I spoke on the emerging WebVR API and how developers can get started
+          +entry("https://devdiner.com/interviews/sean-mcbeth-on-primrose-webvr", "Sean McBeth on Primrose and WebVR development (Dev Diner)") I was interviewed for a blog about learning VR programming.
+          +entry("http://www.blogtalkradio.com/dc-entrepreneur/2015/11/05/interview-with-sean-mcbeth-future-of-vr", "DC Entrepreneur: Episode 2") I was interviewed on a podcast about entrepreneurship
+          +entry("https://www.meetup.com/DCRealities/events/229971228/", "2nd Annual DCVR Innovation Panel") I spoke on a panel about the current state and future of VR
+          +entry("http://makezine.com/projects/make-35/making-pigments/", "MAKE Magazine, Issue 35: Making Pigments") I wrote an article about making paint pigments from basic chemicals
 
         h2: a(name="press") Press
         ul
-          +entry("http://dcinno.streetwise.co/2017/03/06/a-dc-virtual-reality-startup-now-lets-you-feel-in-vr/", "DC Inno", "A DC Virtual Reality Startup Now Lets You Feel in VR")
-          +entry("http://dailyfreepress.com/2017/01/18/ar-in-action-features-current-and-future-developments-in-technological-field/", "Daily Free Press, Boston University", "AR in Action features current and future developments in technological field")
-          +entry("https://venturebeat.com/2016/09/17/how-webvr-will-make-virtual-reality-massively-available/", "VentureBeat", "How WebVR will make virtual reality massively available")
-          +entry("http://www.thehoya.com/first-east-coast-virtual-reality-arcade-opens-in-d-c/", "The Hoya, Georgetown University", "First East Coast Virtual Reality Arcade Opens in D.C.")
-          +entry("http://www.techradar.com/news/gaming/how-one-of-the-first-vr-arcades-will-bring-us-together-in-our-own-little-worlds-1327005", "TechRadar", "How one of the first VR arcades will bring us together in our own little worlds")
-          +entry("http://sensics.com/why-webvr/", "Sensics blog", "Why WebVR")
-          +entry("https://www.sitepoint.com/build-virtual-reality-with-primrose-and-webvr/", "SitePoint", "Build Virtual Reality in VR with Primrose and WebVR")
-          +entry("http://dcinno.streetwise.co/2015/08/14/washington-dc-virtual-reality-vr-tech-startups-hub/", "DC Inno", "The State of DC Virtual Reality Innovation: Part 1")
+          +entry("http://dcinno.streetwise.co/2017/03/06/a-dc-virtual-reality-startup-now-lets-you-feel-in-vr/", "DC Inno") A DC Virtual Reality Startup Now Lets You Feel in VR
+          +entry("http://dailyfreepress.com/2017/01/18/ar-in-action-features-current-and-future-developments-in-technological-field/", "Daily Free Press, Boston University") AR in Action features current and future developments in technological field
+          +entry("https://venturebeat.com/2016/09/17/how-webvr-will-make-virtual-reality-massively-available/", "VentureBeat") How WebVR will make virtual reality massively available
+          +entry("http://www.thehoya.com/first-east-coast-virtual-reality-arcade-opens-in-d-c/", "The Hoya, Georgetown University") First East Coast Virtual Reality Arcade Opens in D.C.
+          +entry("http://www.techradar.com/news/gaming/how-one-of-the-first-vr-arcades-will-bring-us-together-in-our-own-little-worlds-1327005", "TechRadar") How one of the first VR arcades will bring us together in our own little worlds
+          +entry("http://sensics.com/why-webvr/", "Sensics blog") Why WebVR
+          +entry("https://www.sitepoint.com/build-virtual-reality-with-primrose-and-webvr/", "SitePoint") Build Virtual Reality in VR with Primrose and WebVR
+          +entry("http://dcinno.streetwise.co/2015/08/14/washington-dc-virtual-reality-vr-tech-startups-hub/", "DC Inno") The State of DC Virtual Reality Innovation: Part 1
 
       h2 Thanks for reading
       img(src="sean" + gifExt, alt="animated portrait", title="Sean T. McBeth")
