move some stuff around

--- a/index.pug
+++ b/index.pug
@@ -70,13 +70,13 @@ html(lang="en-us")
           +entry("https://www.primrosevr.com/", "Primrose") build VR experiences in your browser
           +entry("https://capnmidnight.github.io/marigold-build/", "Marigold") a development environment for JavaScript Single-Page Applications
           +entry("https://github.com/capnmidnight/plume", "Plume") a VR teleconferencing system for the Web
-          +entry("https://github.com/capnmidnight/pliny", "Pliny") a live-documentation system for JavaScript projects
 
         h2: a(name="community") Community
         ul
           +entry("https://www.meetup.com/Alexandria-Code-Coffee/", "Alexandria Code & Coffee") Organizer
           +entry("https://www.meetup.com/DCRealities/", "DC Realities") Co-organizer
           +entry("https://www.meetup.com/Alexandria-VR-Meetup/", "Alexandria VR Meetup") Organizer
+          +entry("http://washington-dc.siggraph.org/", "DC ACM SIGGRAPH") Member
           +entry("https://www.w3.org/community/webvr/participants", "W3 WebVR Community Group") Participant
 
         h2: a(name="talks") Talks &amp; Interviews
