--- a/other.pug
+++ b/other.pug
@@ -39,6 +39,7 @@ html(lang="en-us")
 
         h2: a(name="projects") Past Projects
         ul
+          li: a(href="https://github.com/capnmidnight/pliny") Pliny: a live-documentation system for JavaScript projects
           li #[a(href="https://www.youtube.com/watch?v=PWvPEEpLCT0&feature=youtu.be&t=55") Smart-city VR diorama], with:
             ul
               li #[a(href="https://www.youtube.com/watch?v=gdiIqyTl_Kk") Traffic simulation] with #[a(href="https://www.youtube.com/watch?v=awmEM5jbZAk") night-time dependent effects]
