--- a/index.pug
+++ b/index.pug
@@ -57,9 +57,9 @@ html(lang="en-us")
               href: "tel:+17172617689" }
           ])
 
-        p I am a senior software engineering consultant at #[+offsite("https://www.deloittedigital.com/") Deloitte Digital] with the Deloitte Center for Immersive Learning (DCIL). We build virtual and augmented reality games, training simulations, and abstract data visualization. Audio synthesis and processing, computer vision, peer-to-peer networking, real-time communication, hardware prototyping, and Geographic Information Systems (GIS) are other areas in which I work. I've worked across the range of desktop, Web, mobile, embedded systems, and relational database systems.
+        p I am a senior software engineering consultant at #[+offsite("https://www.deloittedigital.com/") Deloitte Digital], where I build virtual and augmented reality games, training simulations, and abstract data visualization. Audio synthesis and processing, computer vision, peer-to-peer networking, real-time communication, hardware prototyping, and Geographic Information Systems (GIS) are other areas in which I work. I've worked across the range of desktop, Web, mobile, embedded systems, and relational database systems.
 
-        p My current work is focused on Immersive Media. I've successfully bootstrapped and deployed multiple VR projects for Google Cardboard, Oculus Rift, HTC Vive, and Gear VR. I've also built a number of hardware prototypes in radio and wireless input devices. Before VR, I built several analytics-heavy OLTP applications for desktop, Web, and mobile Web.
+        p My current work is focused on Immersive Media. I've successfully bootstrapped and deployed multiple VR projects for Google Cardboard, Oculus Rift, HTC Vive, and Gear VR and AR projects for HoloLens and iOS. I've also built a number of hardware prototypes in radio and wireless input devices. Before VR, I built several analytics-heavy OLTP applications for desktop, Web, and mobile Web.
 
         p My projects usually go from concept to first-version in 1-to-2-month timeframes. I emphasize open communication with stakeholders, frequent issue and user-story tracking and review, correct, normalized relational database design and simple, best-practice-based, DRY, agile software development. I maintain an extremely broad set of skills to bring to bear on your project.
 
@@ -81,6 +81,7 @@ html(lang="en-us")
 
         h2: a(name="talks") Talks &amp; Interviews
         ul
+          +entry("https://mavric.umd.edu/Sean%20T.%20McBeth", "UMD MAVRIC Conference 2018") I spoke on my experience at the #[+offsite("https://www.fallingwater.org/education/fallingwater-institute/immersive-design-residency/") Fallingwater Immersive Design Residency]
           +entry("http://washington-dc.siggraph.org/2017/11/05/exploring-webvrchapter-board-elections/", "DC ACM SIGGRAPH, November 2017") I spoke on the history and current state of VR on the Web
           +entry("https://www.facebook.com/dcvirtualreality/videos/1452036654839849/", "DCVR, June 2017") I spoke on getting started with Augmented Reality programming
           +entry("https://www.evensi.us/virtual-reality-seminar-hosted-by-sean-mcbeth-northern/208134705", "NOVA National Society of Collegiate Scholars'") I was the keynote speaker for their annual event at Northern Virginia Community College's Loudoun campus
