--- a/index.pug
+++ b/index.pug
@@ -81,7 +81,7 @@ html(lang="en-us")
 
         h2: a(name="talks") Talks &amp; Interviews
         ul
-          +entry("https://mavric.umd.edu/Sean%20T.%20McBeth", "UMD MAVRIC Conference 2018") I spoke on my experience at the #[+offsite("https://www.fallingwater.org/education/fallingwater-institute/immersive-design-residency/") Fallingwater Immersive Design Residency]
+          +entry("https://mavric.umd.edu/Sean%20T.%20McBeth", "UMD MAVRIC Conference 2018") I spoke on my experience at the #[+offsite("https://www.fallingwater.org/education/fallingwater-institute/immersive-design-residency/") Fallingwater Immersive Design Residency]. (Presentation with annotations: #[a(href="presentations/immersive-design.pdf") PDF], #[a(href="presentations/immersive-design.pptx") PPTX])
           +entry("http://washington-dc.siggraph.org/2017/11/05/exploring-webvrchapter-board-elections/", "DC ACM SIGGRAPH, November 2017") I spoke on the history and current state of VR on the Web
           +entry("https://www.facebook.com/dcvirtualreality/videos/1452036654839849/", "DCVR, June 2017") I spoke on getting started with Augmented Reality programming
           +entry("https://www.evensi.us/virtual-reality-seminar-hosted-by-sean-mcbeth-northern/208134705", "NOVA National Society of Collegiate Scholars'") I was the keynote speaker for their annual event at Northern Virginia Community College's Loudoun campus
