--- a/index.styl
+++ b/index.styl
@@ -63,6 +63,9 @@ main
 
 .icon-telephone
   background-position 0px -200px
+  
+.icon-resume
+  background-position 0px -225px
 
 ul#contact
   padding 0
