--- a/index.pug
+++ b/index.pug
@@ -54,10 +54,13 @@ html(lang="en-us")
               href: "https://github.com/capnmidnight" },
             { type: "telephone",
               desc: "Call Sean",
-              href: "tel:+17172617689" }
+              href: "tel:+17172617689" },
+            { type: "resume",
+              desc: "Download Sean's resume",
+              href: "Resume-STMcBeth-2019.pdf" }
           ])
 
-        p I am a senior software engineering consultant at #[+offsite("https://www.deloittedigital.com/") Deloitte Digital], where I build virtual and augmented reality games, training simulations, and abstract data visualization. Audio synthesis and processing, computer vision, peer-to-peer networking, real-time communication, hardware prototyping, and Geographic Information Systems (GIS) are other areas in which I work. I've worked across the range of desktop, Web, mobile, embedded systems, and relational database systems.
+        p I am a senior software engineering consultant, building virtual and augmented reality games, training simulations, and abstract data visualizations. Audio synthesis and processing, computer vision, peer-to-peer networking, real-time communication, hardware prototyping, and Geographic Information Systems (GIS) are other areas in which I work. I've worked across the range of desktop, Web, mobile, embedded systems, and relational database systems.
 
         p My current work is focused on Immersive Media. I've successfully bootstrapped and deployed multiple VR projects for Google Cardboard, Oculus Rift, HTC Vive, and Gear VR and AR projects for HoloLens and iOS. I've also built a number of hardware prototypes in radio and wireless input devices. Before VR, I built several analytics-heavy OLTP applications for desktop, Web, and mobile Web.
 
