--- a/other.pug
+++ b/other.pug
@@ -5,7 +5,6 @@ html(lang="en-us")
     meta(name="viewport", content="width=device-width, shrink-to-fit=0, initial-scale=1.0")
     title Sean T. McBeth: other info
     style(type="text/css")!= readFile("index" + cssExt)
-    != liveReload
   body
 
     section#menu
@@ -15,6 +14,7 @@ html(lang="en-us")
         li: a(href="#projects") .com
         li: a(href="#volunteer") .org
         li: a(href="index.html") home/
+        li: a(href="vr.html") vr/
 
     main
 
