update headset titles for Google

--- a/vr.pug
+++ b/vr.pug
@@ -41,9 +41,9 @@ html(lang="en-us")
           +entry("https://www.lenovo.com/us/en/virtual-reality-and-smart-devices/virtual-and-augmented-reality/lenovo-mirage-solo/Mirage-Solo/p/ZZIRZRHVR01", "Lenovo Mirage Solo") I wish this headset had delayed to include the 6DOF controllers. It's an excellent headset, and I enjoy working in the Daydream ecosystem.
           +entry("https://en.wikipedia.org/wiki/Pixel_2", "Google Pixel 2") I have a Google Pixel 2 for ARCore projects. It is my daily-driver phone.
           +entry("https://www.vive.com/us/product/vive-virtual-reality-system/", "HTC Vive") My standard Vive is equipped with the #[+offsite("https://www.vive.com/us/vive-deluxe-audio-strap/") Deluxe Audio Strap] and the #[+offsite("https://www.tpcastvr.com/store/TPCAST-Wireless-Adapter-for-VIVE-p93101456") TPCAST Wireless Adapater]. I also have two #[+offsite("https://www.vive.com/us/vive-tracker/") Vive Trackers] with hand straps.
-          +entry("https://vr.google.com/daydream/", "Daydream") I have a Daydream View 2 with a Google Pixel 2 smartphone. The smartphone is my daily-driver. I have two standard 3DOF controllers for it.
+          +entry("https://vr.google.com/daydream/", "Google Daydream") I have a Daydream View 2 with a Google Pixel 2 smartphone. The smartphone is my daily-driver. I have two standard 3DOF controllers for it.
           +entry("https://www.samsung.com/global/galaxy/gear-vr/", "Samsung Gear VR") I have a SM-R324 version, with the motion controller, of the Gear VR (the last white version they distrubeted) with a Samsung Galaxy S8 to run in it. This was the first mobile VR headset I used on a regular basis, and even bought my father one for his phone.
-          +entry("https://vr.google.com/cardboard/", "Google cardboard") I easily have a dozen different "dumb" slot-in-smartphone headsets, both purchased and of my own creation.
+          +entry("https://vr.google.com/cardboard/", "Google Cardboard") I easily have a dozen different "dumb" slot-in-smartphone headsets, both purchased and of my own creation.
           +entry("https://developer.oculus.com/blog/open-source-release-of-rift-dk2/", "Oculus Rift DK2") I still have my first "real" VR headset.
           li #[em Pico Neo DK] I have a Pico Neo dev-kit, which is a 3DOF headset with a gamepad controlller. It's interesting from a historical perspective.
 
